@@ -20,13 +20,17 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import cpw.mods.modlauncher.ClassTransformer;
+import cpw.mods.modlauncher.LaunchPluginHandler;
 import cpw.mods.modlauncher.TransformStore;
-import cpw.mods.modlauncher.api.CoremodTransformationContext;
+import cpw.mods.modlauncher.TransformTargetLabel;
+import cpw.mods.modlauncher.api.ITransformationService;
 import cpw.mods.modlauncher.api.ITransformer;
+import cpw.mods.modlauncher.api.ITransformerVotingContext;
 import cpw.mods.modlauncher.api.TargetType;
-import java.util.List;
+import cpw.mods.modlauncher.api.TransformerVoteResult;
+import java.util.Collections;
 import java.util.Set;
-import net.neoforged.fml.loading.CoreModsTransformerProvider;
+import java.util.stream.Stream;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.MarkerManager;
 import org.apache.logging.log4j.core.config.Configurator;
@@ -47,11 +51,13 @@ class ClassTransformerTests {
     void testClassTransformer() throws Exception {
         MarkerManager.getMarker("CLASSDUMP");
         Configurator.setLevel(ClassTransformer.class.getName(), Level.TRACE);
-        ClassTransformer classTransformer = new ClassTransformer(new TransformStore(List.of(
-                CoreModsTransformerProvider.makeTransformer(classTransformer(
-                        ITransformer.Target.targetClass("test.MyClass"))))),
-                null, null);
-        byte[] result = classTransformer.transform(new byte[0], "test.MyClass", null);
+        final TransformStore transformStore = new TransformStore();
+        final LaunchPluginHandler lph = new LaunchPluginHandler(Stream.of());
+        final ClassTransformer classTransformer = new ClassTransformer(transformStore, lph, null);
+        final ITransformationService dummyService = new MockTransformerService();
+        transformStore.addTransformer(new TransformTargetLabel("test.MyClass", TargetType.CLASS), classTransformer(), dummyService);
+        byte[] result = classTransformer.transform(new byte[0], "test.MyClass", "testing");
+
         assertAll("Class loads and is valid",
                 () -> assertNotNull(result),
 //                () -> assertNotNull(new TransformingClassLoader(transformStore, lph, FileSystems.getDefault().getPath(".")).getClass("test.MyClass", result)),
@@ -69,11 +75,8 @@ class ClassTransformerTests {
         dummyClass.fields.add(new FieldNode(Opcodes.ACC_PUBLIC, "dummyfield", "Ljava/lang/String;", null, null));
         ClassWriter cw = new ClassWriter(Opcodes.ASM5);
         dummyClass.accept(cw);
-        classTransformer = new ClassTransformer(new TransformStore(List.of(
-                CoreModsTransformerProvider.makeTransformer(fieldNodeTransformer1(
-                        ITransformer.Target.targetField("test.DummyClass", "dummyfield"))))),
-                null, null);
-        byte[] result1 = classTransformer.transform(cw.toByteArray(), "test.DummyClass", null);
+        transformStore.addTransformer(new TransformTargetLabel("test.DummyClass", "dummyfield"), fieldNodeTransformer1(), null);
+        byte[] result1 = classTransformer.transform(cw.toByteArray(), "test.DummyClass", "testing");
         assertAll("Class loads and is valid",
                 () -> assertNotNull(result1),
 //                () -> assertNotNull(new TransformingClassLoader(transformStore, lph, FileSystems.getDefault().getPath(".")).getClass("test.DummyClass", result1)),
@@ -85,41 +88,53 @@ class ClassTransformerTests {
                 });
     }
 
-    private ITransformer<FieldNode> fieldNodeTransformer1(ITransformer.Target<FieldNode> target) {
+    private ITransformer<FieldNode> fieldNodeTransformer1() {
         return new ITransformer<>() {
             @Override
-            public void transform(FieldNode input, CoremodTransformationContext context) {
+            public FieldNode transform(FieldNode input, ITransformerVotingContext context) {
                 input.value = "CHEESE";
+                return input;
+            }
+
+            @Override
+            public TransformerVoteResult castVote(ITransformerVotingContext context) {
+                return TransformerVoteResult.YES;
             }
 
             @Override
             public Set<Target<FieldNode>> targets() {
-                return Set.of(target);
+                return Collections.emptySet();
             }
 
             @Override
-            public TargetType getTargetType() {
+            public TargetType<FieldNode> getTargetType() {
                 return TargetType.FIELD;
             }
         };
     }
 
-    private ITransformer<ClassNode> classTransformer(ITransformer.Target<ClassNode> target) {
+    private ITransformer<ClassNode> classTransformer() {
         return new ITransformer<>() {
             @Override
-            public void transform(ClassNode input, CoremodTransformationContext context) {
+            public ClassNode transform(ClassNode input, ITransformerVotingContext context) {
                 input.superName = "java/lang/Object";
                 FieldNode fn = new FieldNode(Opcodes.ACC_PUBLIC, "testfield", "Ljava/lang/String;", null, null);
                 input.fields.add(fn);
+                return input;
+            }
+
+            @Override
+            public TransformerVoteResult castVote(ITransformerVotingContext context) {
+                return TransformerVoteResult.YES;
             }
 
             @Override
             public Set<Target<ClassNode>> targets() {
-                return Set.of(target);
+                return Collections.emptySet();
             }
 
             @Override
-            public TargetType getTargetType() {
+            public TargetType<ClassNode> getTargetType() {
                 return TargetType.CLASS;
             }
         };
